added sign up logic best prakctise
