# util/error/response.go
@@ -9,6 +9,10 @@ import (
 type errorResponse struct {
 	Message string `json:"message"`
 }
+type errorResponseData struct {
+	Message string      `json:"message"`
+	Data    interface{} `json:"data"`
+}
 
 type statusResponse struct {
 	Status string `json:"status"`
@@ -17,4 +21,9 @@ type statusResponse struct {
 func NewHandlerErrorResponse(ctx *gin.Context, statusCode int, message string, logrus *logrus.Logger) {
 	logrus.Error(message)
 	ctx.AbortWithStatusJSON(statusCode, errorResponse{message})
+}
+
+func NewHandlerErrorResponseData(ctx *gin.Context, statusCode int, message string, data interface{}, logrus *logrus.Logger) {
+	logrus.Error(message)
+	ctx.AbortWithStatusJSON(statusCode, errorResponseData{message, data})
 }
